OO-6476 fix taxonomy tag alignment and remove tag icon from course card view

--- a/src/main/webapp/static/themes/light/modules/_coursesite.scss
+++ b/src/main/webapp/static/themes/light/modules/_coursesite.scss
@@ -145,6 +145,10 @@
 
 					@include text-overflow();					
 					width: 98%;
+									
+					.o_icon_tags {
+						display: none;
+					}					
 					
 					.o_taxonomy {
 						font-size: 82%;
