--- a/src/main/webapp/static/themes/light/modules/_taxonomy.scss
+++ b/src/main/webapp/static/themes/light/modules/_taxonomy.scss
@@ -38,6 +38,7 @@
 	color: $o-competences-font-color;
 	border-color: $o-competences-color; 
 	border-radius: 0.5em;
+	vertical-align: bottom;
 	
 	&:hover {
 		text-decoration: none;
